--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1 id="title">Paleta de Cores</h1>
+    </header>
+    <section>
+        <div id="chosePaleteColor">
+            <label for="">Escolha a cor(inglês) da sua paleta</label><br>
+            <div id="inputPlaceholders">
+                <input type="text" id='pallete2Input' placeholder="Paleta 2"><br>
+                <input type="text" id='pallete3Input' placeholder="Paleta 3"><br>
+                <input type="text" id='pallete4Input' placeholder="Paleta 4"><br>
+            </div>
+
+        </div>
+        <div id='color-palette'>
+            <div id='black' class='color selected'></div>
+            <div id="palette2" class='color'></div>
+            <div id='palette3' class='color'></div>
+            <div id='palette4' class='color'></div>
+
+        </div>
+    </section>
+    <section>
+        <div id='table'></div>
+
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
