Tabela de pixels dinâmica

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
+    <button id='clear-board'>Limpar</button>
+    <section>
+        <div id= 'defineMatriz'>
+ 
+            <input type="number" id='board-size' value='5' placeholder="Defina o tamanho do quadro NxN<"><br>
+            <button id='generate-board'>VQV</button>
+
+        </div>
+    </section>
     <section>
         <div id="chosePaleteColor">
             <label for="">Escolha a cor(inglês) da sua paleta</label><br>
@@ -29,8 +38,9 @@
 
         </div>
     </section>
+
     <section>
-        <div id='table'></div>
+        <div id='pixel-board'></div>
 
     </section>
     <script src="script.js"></script>
