--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arte em Pixels</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -15,6 +16,7 @@
     <section>
         <div >
             <div id="chosePaleteColor">
+                <button id='blackInput'>Paleta 1</button>
                 <button id='pallete2Input'>Paleta 2</button>
                 <button id='pallete3Input'>Paleta 3</button>
                 <button id='pallete4Input'>Paleta 4</button>
@@ -28,10 +30,10 @@
 
         </div>
     </section>
-    <button id='clear-board'>Limpar</button>
-    <section>
+
+    <section id="clear-input">
+        <button id='clear-board'>Limpar</button>
         <div id= 'defineMatriz'>
- 
             <input type="number" id='board-size' value='5' min ='1' max ='50' placeholder="Defina o tamanho do quadro NxN<"><br>
             <button id='generate-board'>VQV</button>
 
